--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ tr {
     .firstdiv{
         width: 100vw;
         height: 100vh;
+        overflow-y: scroll;
         border-radius: 0%;
     }
 }
